fixed hightlight details, overflows, content

--- a/src/App.css
+++ b/src/App.css
@@ -32,20 +32,20 @@
   border-width: 1px;
 }
 
-.highlightContainer::-webkit-scrollbar-track
+.highlightContainer::-webkit-scrollbar-track, .highlightDetails::-webkit-scrollbar-track, .details::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4);
 	border-radius: 10px;
 	background-color: #f2f2f2;
 }
 
-.highlightContainer::-webkit-scrollbar
+.highlightContainer::-webkit-scrollbar, .highlightDetails::-webkit-scrollbar, .details::-webkit-scrollbar
 {
 	width: 8px;
 	background-color: #F5F5F5;
 }
 
-.highlightContainer::-webkit-scrollbar-thumb
+.highlightContainer::-webkit-scrollbar-thumb, .highlightDetails::-webkit-scrollbar-thumb, .details::-webkit-scrollbar-thumb
 {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
@@ -53,6 +53,7 @@
 }
 
 .highlightDetails{
+  overflow: auto;
   height:85vh;
   padding: 10px;
   box-shadow: 0px 2px 4px 0 rgba(0,0,0,0.1), 0 4px 10px 0 rgba(0,0,0,0.19);
@@ -69,6 +70,7 @@
 
 /* Personal card details*/
 .details{
+  overflow: auto;
   height:85vh;
   font-size: 13px;
   text-align: center;
